docs/semantic-ontology/linkml/tests/invalid/requirement-no-condition-id.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-req-no-conditionid",
    "@type": "dcs:ContractTemplate",
    "dcs:metadata": {
        "@id": "did:web:localhost:template:test-req-no-conditionid#metadata",
        "@type": "dcs:TemplateMetadata",
        "dcs:title": "Test"
    },
    "dcs:policies": [
        { "@id": "did:web:localhost:template:test-req-no-conditionid#policy-1" }
    ],
    "dcs:contractData": [
        {
            "@id": "did:web:localhost:template:test-req-no-conditionid#req-1",
            "@type": "dcs:DataRequirement",
            "dcs:name": "Missing conditionId",
            "dcs:fields": [
                {
                    "@id": "did:web:localhost:template:test-req-no-conditionid#field-1",
                    "@type": "dcs:RequirementField",
                    "dcs:parameterName": "some.field"
                }
            ]
        }
    ]
}
